--- a/witkin-references-updating-tool.html
+++ b/witkin-references-updating-tool.html
@@ -1,41 +1,22 @@
 <!doctype html>
-
 <html lang="en">
 
 <head>
-
 	<meta charset="UTF-8">
-
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-
 	<title>Witkin References Updating Tool</title>
-
-	<link rel="stylesheet" href="../../_global-externals/stylesheets/bootstrap.min.css">
-
-	<link rel="stylesheet" href="../../_global-externals/stylesheets/bootstrap4-toggle.css" />
-
-	<link rel="stylesheet" href="../../_global-externals/icons/bootstrap/bootstrap-icons.css" />
-
-	<link rel="stylesheet" href="../_externals/stylesheets/tools/witkin.css">
-
+	<link rel="stylesheet" href="_global-externals/stylesheets/bootstrap.min.css">
+	<link rel="stylesheet" href="_global-externals/stylesheets/bootstrap4-toggle.css" />
+	<link rel="stylesheet" href="_global-externals/icons/bootstrap/bootstrap-icons.css" />
+	<link rel="stylesheet" href="_externals/stylesheets/tools/witkin.css">
 	<script src="_global-externals/scripts/personalization.js"></script>
-
 	<script src="_global-externals/scripts/jquery-3.5.1.min.js"></script>
-
 	<script src="_global-externals/scripts/2.2.4.jquery.min.js"></script>
-
 	<link rel="shortcut icon" type="image/png" href="_global-externals/favicons/builder-2.png" />
-
-
-
-
-
-
-	<script src="eden/_externals/scripts/core/z-text-fields-storage-session.js"></script>
-
+	<script src="_externals/scripts/core/z-text-fields-storage-session.js"></script>
 </head>
 
-<body class="body-bg">
+<body>
 
 	<div class="collapse show donothighlight" id="anchor-shortcut-btn-container">
 		<div class="popup">
@@ -554,13 +535,13 @@
 		<script src="_global-externals/scripts/4.0.0.bootstrap.min.js"></script>
 		<script src="_global-externals/scripts/2.2.4.jquery.min.js"></script>
 		<script src="_global-externals/scripts/bootstrap4-toggle.min.js"></script>
-		<script src="eden/_externals/scripts/witkin/witkin-1.js"></script>
-		<script src="eden/_externals/scripts/witkin/witkin-2.js"></script>
-		<script src="eden/_externals/scripts/core/z-font-style.js"></script>
-		<script src="eden/_externals/scripts/core/z-disables.js"></script>
-		<script src="eden/_externals/scripts/core/z-sticky-note-1.js"></script>
-		<script src="eden/_externals/scripts/core/z-sticky-note-2.js"></script>
-		<script src="eden/_externals/scripts/core/z-sticky-note-3.js"></script>
+		<script src="_externals/scripts/witkin/witkin-1.js"></script>
+		<script src="_externals/scripts/witkin/witkin-2.js"></script>
+		<script src="_externals/scripts/core/z-font-style.js"></script>
+		<script src="_externals/scripts/core/z-disables.js"></script>
+		<script src="_externals/scripts/core/z-sticky-note-1.js"></script>
+		<script src="_externals/scripts/core/z-sticky-note-2.js"></script>
+		<script src="_externals/scripts/core/z-sticky-note-3.js"></script>
 
 		<script>
 			$(document).ready(function () {
