--- a/ston-search-and-replace.html
+++ b/ston-search-and-replace.html
@@ -3,30 +3,15 @@
 <html lang="en">
 
 <head>
-
 	<meta charset="UTF-8">
-
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-
 	<title>STON Search and Replace Tool</title>
-
-	<link rel="stylesheet" href="../../_global-externals/stylesheets/bootstrap.min.css">
-
-	<link rel="stylesheet" href="../../_global-externals/icons/bootstrap/bootstrap-icons.css" />
-
+	<link rel="stylesheet" href="_global-externals/stylesheets/bootstrap.min.css">
+	<link rel="stylesheet" href="_global-externals/icons/bootstrap/bootstrap-icons.css" />
 	<script src="_global-externals/scripts/jquery-3.5.1.min.js"></script>
-
 	<script src="_global-externals/scripts/2.2.4.jquery.min.js"></script>
-
 	<link rel="shortcut icon" type="image/png" href="_global-externals/favicons/builder-2.png" />
-
 	<script src="_global-externals/scripts/personalization.js"></script>
-
-
-
-
-
-
 	<script src="eden/_externals/scripts/core/z-text-fields-storage-session.js"></script>
 
 	<style>
@@ -578,7 +563,7 @@
 				<div class="modal-body">
 					<div class="form-group mx-3">
 						<div>
-							<iframe src="../highlighters/brackets-counter.html" loading="lazy" width="1080" height="750" frameborder="0" marginheight="0" marginwidth="0"></iframe>
+							<iframe src="highlighters/brackets-counter.html" loading="lazy" width="1080" height="750" frameborder="0" marginheight="0" marginwidth="0"></iframe>
 						</div>
 					</div>
 				</div>
