--- a/duplicate-notes-counter.html
+++ b/duplicate-notes-counter.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Dupe Notes Counter</title>
+    <title>Duplicate Notes Counter</title>
     <link rel="shortcut icon" type="image/png"
         href="_global-externals/favicons/builder-2.png" />
 
